# AgentConfig

./: .gitignore  .markdownlint-cli2.jsonc  .pymarkdown.json  AGENTS.codex.md  AGENTS.gemini.md  AGENTS.master.md  AGENTS.md  PREFIX.claude.md  PREFIX.codex.md  PREFIX.gemini.md  README.md  command-map.json  env.sh  mcp.json  pyproject.toml
.github/workflows/: markdownlint.yml  pymarkdown.yml
agents/: next-test-analyzer.md
commands/: create-gh-issues.md  create-worktree.md  fix-bugs.md  list-worktrees.md  next-bugs.md  next-build.md  next-commit.md  next-finalize.md  next-fix-review.md  next-implementation.md  next-prepare.md  next-requirements.md  next-review.md  next-roadmap.md  next-work.md  prime-architect.md  prime-builder.md  prime-fixer.md  prime-orchestrator.md  prime-reviewer.md  prime-tester.md  remove-worktree.md  screenshot-analyze.md  screenshot-fix.md  sync-docs.md  sync-todos.md
commands.master/: create-gh-issues.md  create-worktree.md  fix-bugs.md  list-worktrees.md  next-finalize.md  next-implementation.md  next-requirements.md  next-review.md  next-roadmap.md  next-work.md  prime-architect.md  prime-builder.md  remove-worktree.md  screenshot-analyze.md  screenshot-fix.md  sync-docs.md  sync-todos.md
docs/development/: coding-directives.md  testing-directives.md
docs/development/python/: logging-directives-python.md
skills/next-code-reviewer/: SKILL.md
skills/next-code-simplifier/: SKILL.md
skills/next-comment-analyzer/: SKILL.md
skills/next-silent-failure-hunter/: SKILL.md
skills/next-test-analyzer/: SKILL.md
skills/next-type-design-analyzer/: SKILL.md
